--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <h1> this file is from ansible git-jenkins </h1>
-<h1> created by Sonal MITAAL </h1>
+<h1> created by seshanRaj </h1>
 <h1> File for playbook execution from jenkins</h1>
-<h1>Deploying on 03 dec </h1>
 <h1> making chnages for continous Deployment </h1>
-using jenkins and Ansible
+Succesfully installed the httpd
 
